@@ -1,4 +1,4 @@
-$Id: History,v 1.6 2001-09-17 17:01:16 maire Exp $
+$Id: History,v 1.7 2001-10-24 16:40:54 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+24 oct 01: mma (xrays-V03-02-01)
+- cut per material : G4ForwardXrayTR
 
 17 sep 01: mma (xrays-V03-02-00)
 - modifs in almost all classes for the migration of Materials to pure STL,
